fix(shift-selector): Only obey key press when visible

--- a/src/select/example/select.styl
+++ b/src/select/example/select.styl
@@ -31,3 +31,15 @@
   border-radius: 5px;
   max-height: 300px;
 }
+
+.shift-selector{
+  position: absolute;
+  min-width: 500px;
+  background-color: white;
+  z-index: 1;
+}
+
+.shift-selector .select-container {
+  box-shadow: 3px 3px 3px rgba(0,0,0,.3);
+  border-radius: 0 0 5px 5px;
+}
